--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   frame_app:
-    image: node:alpine
+    build: ./docker/node
     volumes:
       - ./:/app
     working_dir: /app
